feat : no numpy

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ k/Layers/__pycache__/functions.cpython-39.pyc
 k/Layers/__pycache__/base_functions.cpython-39.pyc
 k/Initializers/__pycache__/functions.cpython-39.pyc
 k/Activations/__pycache__/functions.cpython-39.pyc
-memo.txt
+k/Networks/__pycache__/functions.cpython-39.pyc
